--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "bower": "^1.3.3",
+    "connect-mongo": "^0.4.1",
     "express": "~3.3.4",
     "jade": "~0.34.0",
     "oauth": "^0.9.12",
